# acp_research

./: .gitignore  .jwt.private.key  .prod.env  AcpResearch.pem  AcpResearch.postman_collection.json  Cargo.toml  Dockerfile.api  Dockerfile.db  Dockerfile.polling  README.md  acp_research.service  acp_research_api.service  acp_research_polling.service  create-nginx-config.sh  create_prod.sh  custom-entrypoint.sh  default.env  diesel-startup.sh  diesel_startup.sh  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-09-06-164937_initial_schema/: down.sql  up.sql
migrations/2023-09-27-192713_hourly_survey_timestamp_location/: down.sql  up.sql
migrations/2023-10-30-191922_fitbit_two/: down.sql  up.sql
nginx/: nginx.conf
nginx-config/: nginx.conf
nginx/cert/: certificate.crt  private.key  ssl_bundle.crt
prod/: .jwt.private.key
src/: api.rs  controller.rs  infra.rs  lib.rs  main.rs  model.rs  polling.rs  presentation.rs  schema.rs  startup.rs
src/api/: controller.rs  infra.rs  main.rs  model.rs  presentation.rs  startup.rs
src/controller/: airthings.rs  airthings_controller.rs  auth.rs  datastructure.rs  device.rs  fitbit.rs  fitbit_controller.rs  gis_location_controller.rs  gray_wolf.rs  gray_wolf_controller.rs  jwt.rs  jwt_controller.rs  keychain_controller.rs  manage.rs  notification.rs  push_data.rs  socket.rs  survey_controller.rs  test.rs  uhoo_aura.rs  uhoo_aura_controller.rs  uhoo_business_controller.rs  uhoo_home_controller.rs  user_controller.rs  vehicle_controller.rs
src/infra/: airthings_integ.rs  api_error.rs  collection.rs  database.rs  gray_wolf_integ.rs  jwt_middleware.rs  keychain_integ.rs  uhoo_aura_integ.rs  uhoo_business_integ.rs  uhoo_home_integ.rs
src/model/: airthings.rs  airthings_model.rs  auth.rs  datastructure.rs  device.rs  fitbit.rs  fitbit_model.rs  gis_location_model.rs  gray_wolf.rs  jwt.rs  keychain_model.rs  manage.rs  notification.rs  push_data.rs  socket.rs  survey_model.rs  uhoo_aura.rs  uhoo_aura_model.rs  uhoo_home_model.rs  user_model.rs  vehicle_controller_model.rs
src/polling/: controller.rs  main.rs  model.rs  poller.rs  (+1 more)
(+53 files in other folders)
