[package]
name = "acp_research"
version = "0.1.0"
authors = ["Noah Lewis <nlewi26@lsu.edu>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "acp_research"

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.71"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = { version = "0.4.26", features = ["serde"] }
curl = "0.4.44"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
executor = "0.8.4"
futures = "0.3.28"
log = "0.4.19"
mongodb = "2.6.0"
oauth2 = "4.4.1"
reqwest = "0.11.18"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.104"
tokio = "1.29.1"
urlencoding = "2.1.3"
